projects/home-gateway/manifests/home-gateway/home-gateway.deployment.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-gateway
  namespace: home-gateway
spec:
  selector:
    matchLabels:
      app: home-gateway
  replicas: 1
  minReadySeconds: 15
  progressDeadlineSeconds: 300
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: home-gateway
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      hostAliases:
        - ip: "10.0.2.15"
          hostnames:
            - home-assistant.internal
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: inf-k8s.net/location
                    operator: In
                    values:
                      - perth
      containers:
        - name: home-gateway
          image: ghcr.io/accurate0/home-gateway
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 30m
              memory: 336Mi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /v1/health
              port: 8000
              scheme: HTTP
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /v1/health
              port: 8000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /v1/health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config
              mountPath: /etc/home-gateway/config
              readOnly: true
            - name: config-sections
              mountPath: /etc/home-gateway/config/sections
              readOnly: true
            - name: config-devices
              mountPath: /etc/home-gateway/config/devices
              readOnly: true
            - name: config-workflows
              mountPath: /etc/home-gateway/config/workflows
              readOnly: true
            - name: config-lua-lib
              mountPath: /etc/home-gateway/config/lua/lib
              readOnly: true
            - name: config-lua-model-lib
              mountPath: /etc/home-gateway/config/lua/models/lib
              readOnly: true
            - name: config-lua-workflows
              mountPath: /etc/home-gateway/config/lua/workflows
              readOnly: true
            - name: config-lua-integrations
              mountPath: /etc/home-gateway/config/lua/integrations
              readOnly: true
            - name: config-lua-mqtt
              mountPath: /etc/home-gateway/config/lua/models/mqtt
              readOnly: true
            - name: config-lua-home-assistant
              mountPath: /etc/home-gateway/config/lua/models/home_assistant
              readOnly: true
            - name: config-lua-esphome-native-api
              mountPath: /etc/home-gateway/config/lua/models/esphome_native_api
              readOnly: true
            - name: config-lua-tuya
              mountPath: /etc/home-gateway/config/lua/models/tuya
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: home-gateway-config
        - name: config-sections
          configMap:
            name: home-gateway-config-sections
        - name: config-devices
          configMap:
            name: home-gateway-config-devices
        - name: config-workflows
          configMap:
            name: home-gateway-config-workflows
        - name: config-lua-lib
          configMap:
            name: home-gateway-config-lua-lib
        - name: config-lua-model-lib
          configMap:
            name: home-gateway-config-lua-model-lib
        - name: config-lua-workflows
          configMap:
            name: home-gateway-config-lua-workflows
        - name: config-lua-integrations
          configMap:
            name: home-gateway-config-lua-integrations
        - name: config-lua-mqtt
          configMap:
            name: home-gateway-config-lua-mqtt
        - name: config-lua-home-assistant
          configMap:
            name: home-gateway-config-lua-home-assistant
        - name: config-lua-esphome-native-api
          configMap:
            name: home-gateway-config-lua-esphome-native-api
        - name: config-lua-tuya
          configMap:
            name: home-gateway-config-lua-tuya
