projects/home-gateway/manifests/home-gateway/solar-web.deployment.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-web
  namespace: home-gateway
spec:
  selector:
    matchLabels:
      app: solar-web
  replicas: 1
  template:
    metadata:
      labels:
        app: solar-web
    spec:
      containers:
        - name: solar-web
          image: ghcr.io/accurate0/home-gateway-solar-web
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 30
          ports:
            - containerPort: 8080
