projects/home-gateway/manifests/home-gateway/home-gateway.service.yaml
# yaml-language-server: $schema=https://k8s-schemas.anurag.sh/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: home-gateway
  namespace: home-gateway
spec:
  selector:
    app: home-gateway
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: 8000
